GDK W32 Regression in selection behaviour
8caba953 caused a regression in behaviour (what exactly I haven't pinpointed yet).
This code: https://github.com/fontforge/fontforge/blob/master/gdraw/ggdkdraw.c#L97
Used to function just fine, and had no Windows specific code, but with this change, it somehow breaks copying text to the clipboard. Pasting text is fine.
The fact that there was no Windows specific code leads me to believe that whatever the change was is breaking the contract for how selections should work.