ggdkdraw.c: use the undocumented gdk_win32_selection_add_targets to fix copying on windows

See also:
https://gitlab.gnome.org/GNOME/gtk/-/issues/2523